# ChangeLog for portage-postsyncd-mv

*portage-postsyncd-mv-4.4.0:
	Martin Väth <martin at mvath.de>:
	- Flatten repository's directory structure
	- eclasses.usage: Handle VERSION workaround correctly

*portage-postsyncd-mv-4.3.5:
	Martin Väth <martin at mvath.de>:
	- Fix git update failure (regression from 4.3.3)

*portage-postsyncd-mv-4.3.4:
	Martin Väth <martin at mvath.de>:
	- Handle export Bourne shell compatible

*portage-postsyncd-mv-4.3.3:
	Martin Väth <martin at mvath.de>:
	- Avoid git pull breakage with limited depth

*portage-postsyncd-mv-4.3.2:
	Martin Väth <martin at mvath.de>:
	- Avoid LC_COLLATE problems

*portage-postsyncd-mv-4.3.1:
	Martin Väth <martin at mvath.de>:
	- eclasses.usage: fix catdir->catfile

*portage-postsyncd-mv-4.3.0:
	Martin Väth <martin at mvath.de>:
	- eclasses.usage: use File::Which if available

*portage-postsyncd-mv-4.2.3:
	Martin Väth <martin at mvath.de>:
	- eclasses.usage: support "man" arg, force utf8 encoding
	- eclasses.usage: internal: Check require at compile time. Fix use

*portage-postsyncd-mv-4.2.2:
	Martin Väth <martin at mvath.de>:
	- internal: Avoid unnecessary subshell

*portage-postsyncd-mv-4.2.1:
	Martin Väth <martin at mvath.de>:
	- Output newline when fetching with rsync or wget

*portage-postsyncd-mv-4.2.0:
	Martin Väth <martin at mvath.de>:
	- Change version scheme to match eclasses.usage perl versioning
	- Add zsh completion file for eclasses.usage
	- Add eclasses.usage --version -V
	- Add eclasses.usage --print-dir -D

*portage-postsyncd-mv-4.01:
	Martin Väth <martin at mvath.de>:
	- IMPORTANT: When you upgrade from a previous version, remove
	  $PORTDIR/local/timestamp/git-gc.date
	  (where $PORTDIR is the path to your main repository) and all
	  $REPO/.git/git-gc.date
	  (where $REPO is the path to your local overlays/repositories)
	- IMPORTANT: There are renames of configuration variables:
	  POSTSYNC_DAYS_GIT_GC_REPO -> POSTSYNC_DAYS_GIT_REPACK_REPO
	  POSTSYNC_DAYS_GIT_GC -> POSTSYNC_DAYS_GIT_REPACK